--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wealth Tracker - Gestione Patrimonio Personale</title>
+    <title>FringoTracker - Gestione Patrimonio Personale</title>
     <meta
       name="description"
       content="Applicazione per la gestione e analisi del patrimonio personale"
